--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,18 +21,19 @@ jobs:
           user: Coordinate-Cat
           template: classic
           base: header, activity, community, repositories, metadata
-          config_animated: yes
           config_timezone: Asia/Tokyo
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
+          plugin_introduction: yes
+          plugin_introduction_title: yes
           plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
           plugin_languages: yes
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
           plugin_pagespeed: yes
-          plugin_pagespeed_detailed: yes
           plugin_pagespeed_url: .user.website
+          plugin_people: yes
+          plugin_people_limit: 28
+          plugin_people_size: 28
+          plugin_people_types: followers, following
           plugin_stars: yes
-          plugin_stars_limit: 20
+          plugin_stars_limit: 15
