update : committer_token

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,7 +15,7 @@ jobs:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
           # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          committer_token: ${{ secrets.METRICS }}
 
           # Options
           user: Coordinate-Cat
