--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,8 +4,8 @@ on:
   # Schedule updates (each hour)
   schedule: [{cron: "0 18 * * 0"}]
   # Lines below let you run workflow manually and on each commit
-  push: {branches: ["master", "main"]}
   workflow_dispatch:
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -13,27 +13,33 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.METRICS }}
-          # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: Coordinate-Cat
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Tokyo
-          plugin_introduction: yes
-          plugin_introduction_title: yes
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: X
+          plugin_followup: yes
+          plugin_followup_sections: repositories
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
+          plugin_languages_categories: markup, programming
           plugin_languages_colors: github
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_lines: yes
           plugin_pagespeed: yes
+          plugin_pagespeed_detailed: yes
           plugin_pagespeed_url: .user.website
-          plugin_people: yes
-          plugin_people_limit: 28
-          plugin_people_size: 28
-          plugin_people_types: followers, following
           plugin_stars: yes
-          plugin_stars_limit: 15
+          plugin_stars_limit: 50  
