--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,11 +19,13 @@ jobs:
           user: Coordinate-Cat
           template: classic
           base: header, activity, community, repositories, metadata
+          config_display: large
+          config_padding: 0%
           config_timezone: Asia/Tokyo
           plugin_achievements: yes
-          plugin_achievements_display: compact
+          plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: X
+          plugin_achievements_threshold: C
           plugin_followup: yes
           plugin_followup_sections: repositories
           plugin_isocalendar: yes
@@ -39,7 +41,6 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_lines: yes
           plugin_pagespeed: yes
-          plugin_pagespeed_detailed: yes
           plugin_pagespeed_url: .user.website
           plugin_stars: yes
-          plugin_stars_limit: 50  
+          plugin_stars_limit: 8
