--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
           user: Coordinate-Cat
