--- a/.github/workflows/anilist.yml
+++ b/.github/workflows/anilist.yml
@@ -21,7 +21,7 @@ jobs:
           plugin_anilist: yes
           plugin_anilist_medias: anime, manga
           plugin_anilist_sections: characters, watching, reading, favorites
-          plugin_anilist_limit: 2 # キャラ以外の同時表示数
-          plugin_anilist_shuffle: yes # シャッフル
-          plugin_anilist_user: .user.login # ユーザ名がGitHubと揃っている場合はこれでいい
-          plugin_anilist_limit_characters: 22 # キャラ上限
+          plugin_anilist_limit: 2
+          plugin_anilist_shuffle: yes
+          plugin_anilist_user: Ocat623
+          plugin_anilist_limit_characters: 22
