--- a/.github/workflows/right-metrics.yml
+++ b/.github/workflows/right-metrics.yml
@@ -35,3 +35,14 @@ jobs:
           plugin_topics: yes
           plugin_topics_limit: 0
           plugin_topics_mode: mastered
+          
+      - name: Recent activity charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: charts.svg
+          token: ${{ secrets.METRICS }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
+          config_timezone: Japan/Tokyo
