--- a/.github/workflows/right-metrics.yml
+++ b/.github/workflows/right-metrics.yml
@@ -55,3 +55,5 @@ jobs:
           base: ""
           plugin_achievements: yes
           plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
