--- a/.github/workflows/right-metrics.yml
+++ b/.github/workflows/right-metrics.yml
@@ -34,7 +34,7 @@ jobs:
           base: ""
           plugin_topics: yes
           plugin_topics_limit: 0
-          plugin_topics_mode: mastered
+          plugin_topics_mode: icons
           
       - name: Charts
         uses: lowlighter/metrics@latest
