--- a/.github/workflows/left-metrics.yml
+++ b/.github/workflows/left-metrics.yml
@@ -80,7 +80,7 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_pagespeed: yes
-          plugin_pagespeed_url: .user.website
+          plugin_pagespeed_url: https://route23.pages.dev/
           
       - name: stars
         uses: lowlighter/metrics@latest
