--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -64,13 +64,15 @@ jobs:
           plugin_stars: yes
           plugin_stars_limit: 8
 
-      - name: isocalendar
+      - name: bottom
         uses: lowlighter/metrics@latest
         with:
-          filename: isocalendar.svg
+          filename: bottom.svg
           token: ${{ secrets.METRICS }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          base: header
+          base: ""
           config_order: ""
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
