--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -73,6 +73,6 @@ jobs:
           base: ""
 #           config_order: ""
           plugin_followup: yes
-          plugin_followup_sections: repositories, user
+          plugin_followup_sections: repositories
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
