--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,8 +28,8 @@ jobs:
           config_display: large
           config_padding: 0, 8 + 11%
           config_timezone: Asia/Tokyo
-          plugin_followup: yes
-          plugin_followup_sections: repositories
+#           plugin_followup: yes
+#           plugin_followup_sections: repositories
           plugin_anilist: yes
           plugin_anilist_medias: anime, manga
           plugin_anilist_sections: characters, watching, reading, favorites
