--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -38,7 +38,7 @@ jobs:
           plugin_anilist_user: Ocat623
           plugin_anilist_limit_characters: 22
           plugin_achievements: yes
-          plugin_achievements_display: compact
+          plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_habits: yes
